// Original file: proto/chat.proto

import type { ChatMessage as _chatPackage_ChatMessage, ChatMessage__Output as _chatPackage_ChatMessage__Output } from '../chatPackage/ChatMessage';

export interface MessageList {
  'msg'?: (_chatPackage_ChatMessage)[];
}

export interface MessageList__Output {
  'msg': (_chatPackage_ChatMessage__Output)[];
}
